Decided to use database to store stories. Easier and cheaper than S3. Also found better vocabulary for publishing. Editions, not proofs or metadata. Revamped API and database upgrade script.
